--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <section id="banner">
 	<div class="inner">
-    <h2><img src='img/logo.jpeg' height='64' ><br />Myrish&trade;</h2>
+    <h2><div style='vertical-align: middle;'><img src='img/myrish_trans_logo.png' height='96' ><br />Myrish&trade;</div></h2>
     <p>A <a href="https://myrish.com/">small business</a> built on <br/>quality, trust and customer service</p>
     
 		<ul class="actions special">
