--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       
   
   
-    <p>We work hard to exceed your expectations! Yes!</p>
+    <p>We work hard to exceed your expectations!</p>
   
 
 
