--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 		
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6GH9KXQT5K"></script>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -198,6 +199,7 @@
         <div class="col-12">
           <textarea name="message" id="message" placeholder="Your Message" rows="6" required></textarea>
         </div>
+        <div class="g-recaptcha" data-sitekey="6LcXpiQiAAAAAE2r7qP6T5HDoH0F1jlW-J985PuK"></div>
         <div class="col-12">
           <ul class="actions">
             <li><input type="submit" value="send" class="primary" /></li>
