fixed link in 404

--- a/404.html
+++ b/404.html
@@ -80,7 +80,7 @@
   
   <section class="wrapper style5">
 		<div class="inner">
-      <p id="title">Please go back to <a href="/47">Home</a> page!</p>
+      <p id="title">Please go  back to <a href="/">Home</a> page!</p>
 		</div>
 	</section>
   
